# nexus-ai

./: .gitignore  DESIGN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  design.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs_commands.rs  git_commands.rs  lib.rs  process_manager.rs  tools.rs  workflow.rs
src/components/CommandPalette/: CommandPalette.tsx
src/components/Nav/: SideNav.tsx  TelemetryRibbon.tsx  TopBar.tsx
src/components/Panels/: BuffersPanel.tsx  CodePanel.tsx  DebugPanel.tsx  GitPanel.tsx  KernelPanel.tsx  NetworkPanel.tsx  SessionsPanel.tsx  TelemetryPanel.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/Terminal/: TerminalWindow.tsx
src/components/Toast/: ToastContainer.tsx
src/components/WindowManager/: Taskbar.tsx  Window.tsx  WindowManager.tsx
src/components/Workflow/: WorkflowEditor.tsx  WorkflowNode.tsx
src/lib/: tauri.ts
src/store/: cwdStore.ts  sessionStore.ts  toastStore.ts  windowStore.ts  workflowStore.ts
